# qt_monitoring

./: .gitignore  CMakeLists.txt  package.xml  wks.yml
apps/: qt_monitor.cpp
configs/no_camera/: field.json  live.json  replay.json
configs/one_camera/: annotation_settings.json  live.json  match_settings.json
src/qt_monitoring/: calib_tool.cpp  calib_tool.h  globals.cpp  globals.h  main_window.cpp  main_window.h  player_group.cpp  player_group.h  player_widget.cpp  player_widget.h  pov_manager.cpp  pov_manager.h  sources.cmake  stream_selector.cpp  stream_selector.h  team_panel.cpp  team_panel.h  tools_bar.cpp  tools_bar.h  utils.cpp  utils.h  video_widget.cpp  video_widget.h
